finished OrderItemService UnitTests